[package]
name = "dbug"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI-based debugger for Rust projects"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/dbug"
keywords = ["debugger", "cli", "rust", "development", "tools"]
categories = ["development-tools::debugging", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
termcolor = "1.2"
crossterm = "0.27"
tui = { package = "ratatui", version = "0.24" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
regex = "1.9"
once_cell = "1.18"
notify = "6.1"
dbug-macros = { path = "proc_macros" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"

[workspace]
members = [
    "proc_macros",
    "examples/simple_app",
]

[lib]
name = "dbug"
path = "src/lib.rs"

[[bin]]
name = "dbug"
path = "src/main.rs"
